# hell-app

./: .env  LICENSE  README.md  docker-compose.yaml  package-lock.json  tatus
backend/: Dockerfile  pyproject.toml  todo.txt
backend/app/: api.py  database.py  logging.py  main.py  router.py  schemas.py  settings.py
backend/app/admin/: dependencies.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  exceptions.py  infrastructure.py  models.py  oauth_service.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/celery/: worker.py
backend/app/celery/tasks/: email_tasks.py
backend/app/celery/tasks/email_tasks/: __init__.py  email_tasks.py  manager.py  tasks.py
backend/app/celery/tasks/email_tasks/templates/: account_deleted.html  base_email.html  exam_reminder.html  register.html  (+4 more)
backend/app/core/: exceptions.py  schemas.py  security.py  utils.py
backend/app/core/repository/: abstract_repository.py  base_repository.py
backend/app/database/: __init__.py  manager.py  mixins.py  redis.py
backend/app/database/utils/: connection.py  utils.py
backend/app/exam/: dependencies.py  models.py  repository.py  router.py
backend/app/exam/student/: dependencies.py  router.py  schemas.py  services.py
backend/app/exam/teacher/: collections_router.py  dependencies.py  exam_instance_router.py  router.py  schemas.py  services.py
backend/app/exam/teacher/router/: __init__.py  collections_router.py  exam_instance_router.py  report_router.py
backend/app/exam/teacher/services/: __init__.py  collection_service.py  exam_instance_service.py  report_services.py
backend/app/i18n/: __init__.py  help.md  manager.py
backend/app/middleware/: __init__.py  language_middleware.py  timezone_middleware.py
backend/app/users/: api.py  dependencies.py  depends.py  models.py  router.py  schemas.py  service.py  services.py
backend/tests/: conftest.py  test_auth.py  test_main.py
backend/tests/auth/: test_repository.py  test_route.py  test_service.py
backend/tests/core/: test_base_repository.py
backend/tests/exam/student/: test_route.py
backend/tests/exam/teacher/: test_report_router.py  test_route_collections.py  test_route_instance.py  test_route_instances.py  test_service_collection.py
(+211 files in other folders)
