[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.8.1",
    "babel>=2.17.0",
    "bcrypt>=4.3.0",
    "beanie>=1.29.0",
    "celery>=5.5.1",
    "fastapi-mail>=1.4.2",
    "fastapi[standard]>=0.115.11",
    "flower>=2.0.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
    "reportlab>=4.4.0",
]

[project.optional-dependencies]
test = [
    "faker>=37.1.0",
    "httpx>=0.28.1",
    "mongomock-motor>=0.0.35",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


